2007-11-01  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/utilities.c,
	plugins/debug-manager/utilities.h,
	plugins/debug-manager/threads.c,
	plugins/debug-manager/plugin.c,
	plugins/debug-manager/plugin.h,
	plugins/debug-manager/disassemble.h,
	plugins/debug-manager/watch.c,
	plugins/debug-manager/watch.h,
	plugins/debug-manager/breakpoints.c,
	plugins/debug-manager/stack_trace.c:
	Replace few remaining function calls by signal 

	* plugins/debug-manager/disassemble.c,
	plugins/debug-manager/registers.c,
	plugins/debug-manager/memory.c,
	plugins/debug-manager/locals.c,
	plugins/debug-manager/queue.c,
	plugins/debug-manager/queue.h:
	Connect signals when debugger is started
	Disconnect them when debugger is stopped
	Do not display window if debugger doesn't support feature

	* plugins/gdb/plugin.c,
	libanjuta/interfaces/libanjuta.idl:
	Remove unused initialization function

2007-11-01  Naba Kumar  <naba.kumar@gnome.org>

	* configure.in:
	* plugins/file-manager/Makefile.am:
	* scripts/build-schemas.mk: Fixed 'make distcheck'

2007-11-01  Naba Kumar  <naba.kumar@gnome.org>

	* manuals/reference/libanjuta/libanjuta-docs.sgml,
	manuals/reference/libanjuta/libanjuta-sections.txt: Updated docs
	to latest API additions.

	* manuals/reference/libanjuta/writing-plugins.sgml: Fixed to adhere
	to API changes.

2007-10-31  Naba Kumar  <naba.kumar@gnome.org>

	* ChangeLog: Fixed indentation.
	* NEWS: Updated for 2.3.0 release. Also merged changes from 2.2.x
	branch.

2007-10-30  Naba Kumar  <naba.kumar@gnome.org>

	* libanjuta/interfaces/libanjuta.idl:
	* plugins/build-basic-autotools/build-basic-autotools.c:
	(build_compile_file_real), (build_build_project),
	(build_install_project), (build_clean_project),
	(build_configure_project), (build_autogen_project),
	(build_distribution_project), (build_build_module),
	(build_install_module), (build_clean_module), (fm_build),
	(fm_install), (fm_clean), (pm_build), (pm_install), (pm_clean),