@@ -469,13 +469,13 @@ AM_CONDITIONAL(HAVE_PLUGIN_SCINTILLA, [test x$scintilla = xyes])
 
 dnl Build symbol-db only if we have gda
 dnl -------------------------------------------------------------
-
+user_disabled_symboldb=1
 AC_ARG_ENABLE(plugin-symbol-db,
-	[ --disable-plugin-symbol-db	Disable new symbol-db plugin], 
-	[ if test "$enableval" = "no"; then
-		user_disabled_symboldb=1
+	[ --enable-plugin-symbol-db	Enable experimental symbol-db plugin], 
+	[ if test "$enableval" = "yes"; then
+		user_disabled_symboldb=0
 	  fi ],
-	[ user_disabled_symboldb=0 ])
+	[ user_disabled_symboldb=1 ])
 
 AC_MSG_CHECKING(if symbol-db plugin is disabled)
 if test "$user_disabled_symboldb" = 1; then
@@ -1264,10 +1264,11 @@ else
 fi
 
 if [ test x$symboldb = xyes ]; then
-        echo "Building new Symbol-db plugin: .......................YES"
+        echo "Building new (unstable) Symbol-db plugin: ..............YES"
 else
-        echo "Building new Symbol-db plugin: .......................NO"
+        echo "Building new (unstable) Symbol-db plugin: .......,,.....NO"
 fi
 echo "-------------------------------------------------------------------"
 echo "AM_CFLAGS = $AM_CFLAGS"
 echo "AM_CXXFLAGS = $AM_CXXFLAGS"
+
