@@ -2,5 +2,5 @@
 Location=anjuta-symbol-db:SymbolDBPlugin
 Icon=symbol-db.png
 _Name=Symbol Database
-_Description=Symbol Database Plugin for Anjuta.
+_Description=Symbol Database Plugin for Anjuta (unstable).
 Interfaces=IAnjutaSymbolManager
